# lofi-girl

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
docs/: index.html
src/: lib.rs  main.rs
