[package]
name = "gifterm"
version = "0.1.0"
edition = "2024"
description = "Play GIF animations in kitty-protocol terminals"
license = "MIT"

[dependencies]
image = "0.25"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
